[gd_scene load_steps=8 format=2]

[ext_resource path="res://script/restart.gd" type="Script" id=1]
[ext_resource path="res://assest/white_bord.png" type="Texture" id=2]
[ext_resource path="res://assest/font/font_size_150.tres" type="DynamicFont" id=3]
[ext_resource path="res://assest/play.png" type="Texture" id=4]
[ext_resource path="res://assest/restart.png" type="Texture" id=5]
[ext_resource path="res://assest/menu(stroke_20).png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "restart"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("restart/restart_b:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -904.142, 964.374 ), Vector2( -904.142, 964.374 ), Vector2( 386.525, 964.374 ), Vector2( 80.8583, 964.374 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("restart/restart_b:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.834, 0.112 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("menu/menu_b:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -902.142, 1209.37 ), Vector2( -902.142, 1209.37 ), Vector2( 223.358, 1209.37 ), Vector2( 80.8583, 1209.37 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("menu/menu_b:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.834, 0.112 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("contenu/contenu_b:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -899.142, 725.374 ), Vector2( 469.858, 725.374 ), Vector2( 80.8583, 725.374 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("contenu/contenu_b:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.833685, 0.111916 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("contenu/contenu_s:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -89.9023, 834.851 ), Vector2( 1279.1, 834.851 ), Vector2( 890.098, 834.851 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("contenu/contenu_s:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("restart/restart_s:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -90.4323, 1072.01 ), Vector2( -90.4323, 1072.01 ), Vector2( 1200.23, 1072.01 ), Vector2( 894.568, 1072.01 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("restart/restart_s:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("bg:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 540, 960 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("bg:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("restart/restart_l:rect_position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -895.433, 997.261 ), Vector2( -895.433, 997.261 ), Vector2( 395.234, 997.261 ), Vector2( 89.5672, 997.261 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("restart/restart_l:rect_size")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 650, 151 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("contenu/contenu_l:rect_position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -890.433, 767.262 ), Vector2( 478.567, 767.262 ), Vector2( 89.5673, 767.262 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("contenu/contenu_l:rect_size")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 711, 151 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("menu/menu_l:rect_position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -893.433, 1242.26 ), Vector2( -893.433, 1242.26 ), Vector2( 232.067, 1242.26 ), Vector2( 89.5672, 1242.26 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("menu/menu_l:rect_size")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 605, 151 ) ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("menu/menu_s:position")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -97.4921, 1314.46 ), Vector2( -97.4921, 1314.46 ), Vector2( 1028.01, 1314.46 ), Vector2( 885.508, 1314.46 ) ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("menu/menu_s:scale")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ) ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("contenu/contenu_b:modulate")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.333333, 0.933333, 0.439216, 0 ), Color( 0.333333, 0.933333, 0.439216, 1 ) ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("contenu/contenu_l:modulate")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/22/type = "value"
tracks/22/path = NodePath("contenu/contenu_s:modulate")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/23/type = "value"
tracks/23/path = NodePath("restart/restart_b:modulate")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.933333, 0.333333, 0.529412, 0 ), Color( 0.933333, 0.333333, 0.529412, 1 ) ]
}
tracks/24/type = "value"
tracks/24/path = NodePath("restart/restart_l:modulate")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/25/type = "value"
tracks/25/path = NodePath("restart/restart_s:modulate")
tracks/25/interp = 1
tracks/25/loop_wrap = true
tracks/25/imported = false
tracks/25/enabled = true
tracks/25/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/26/type = "value"
tracks/26/path = NodePath("menu/menu_b:modulate")
tracks/26/interp = 1
tracks/26/loop_wrap = true
tracks/26/imported = false
tracks/26/enabled = true
tracks/26/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.933333, 0.333333, 0.529412, 0 ), Color( 0.933333, 0.333333, 0.529412, 1 ) ]
}
tracks/27/type = "value"
tracks/27/path = NodePath("menu/menu_s:modulate")
tracks/27/interp = 1
tracks/27/loop_wrap = true
tracks/27/imported = false
tracks/27/enabled = true
tracks/27/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/28/type = "value"
tracks/28/path = NodePath("menu/menu_l:modulate")
tracks/28/interp = 1
tracks/28/loop_wrap = true
tracks/28/imported = false
tracks/28/enabled = true
tracks/28/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/29/type = "value"
tracks/29/path = NodePath("menu/menu_b:rotation_degrees")
tracks/29/interp = 1
tracks/29/loop_wrap = true
tracks/29/imported = false
tracks/29/enabled = true
tracks/29/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/30/type = "value"
tracks/30/path = NodePath("restart/restart_l:rect_rotation")
tracks/30/interp = 1
tracks/30/loop_wrap = true
tracks/30/imported = false
tracks/30/enabled = true
tracks/30/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/31/type = "value"
tracks/31/path = NodePath("menu/menu_s:rotation_degrees")
tracks/31/interp = 1
tracks/31/loop_wrap = true
tracks/31/imported = false
tracks/31/enabled = true
tracks/31/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="restart" type="Node2D"]
script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.607843 )
position = Vector2( 540, 960 )
texture = ExtResource( 2 )

[node name="contenu" type="Node" parent="."]

[node name="contenu_b" type="TouchScreenButton" parent="contenu"]
modulate = Color( 0.333333, 0.933333, 0.439216, 1 )
position = Vector2( 80.8583, 725.374 )
scale = Vector2( 0.833685, 0.111916 )
normal = ExtResource( 2 )

[node name="contenu_l" type="Label" parent="contenu"]
margin_left = 89.5673
margin_top = 767.262
margin_right = 800.567
margin_bottom = 918.262
custom_fonts/font = ExtResource( 3 )
text = "Contenu"

[node name="contenu_s" type="Sprite" parent="contenu"]
position = Vector2( 890.098, 834.851 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="restart" type="Node" parent="."]

[node name="restart_b" type="TouchScreenButton" parent="restart"]
modulate = Color( 0.933333, 0.333333, 0.529412, 1 )
position = Vector2( 80.8583, 964.374 )
scale = Vector2( 0.834, 0.112 )
normal = ExtResource( 2 )

[node name="restart_l" type="Label" parent="restart"]
margin_left = 89.5672
margin_top = 997.261
margin_right = 739.567
margin_bottom = 1148.26
custom_fonts/font = ExtResource( 3 )
text = "Restart"

[node name="restart_s" type="Sprite" parent="restart"]
position = Vector2( 894.568, 1072.01 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )

[node name="menu" type="Node" parent="."]

[node name="menu_b" type="TouchScreenButton" parent="menu"]
modulate = Color( 0.933333, 0.333333, 0.529412, 1 )
position = Vector2( 80.8583, 1209.37 )
scale = Vector2( 0.834, 0.112 )
normal = ExtResource( 2 )

[node name="menu_l" type="Label" parent="menu"]
margin_left = 89.5672
margin_top = 1242.26
margin_right = 694.567
margin_bottom = 1393.26
custom_fonts/font = ExtResource( 3 )
text = "Menu"

[node name="menu_s" type="Sprite" parent="menu"]
position = Vector2( 885.508, 1314.46 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="restart_animation" type="AnimationPlayer" parent="."]
autoplay = "restart"
playback_speed = 3.0
anims/restart = SubResource( 1 )

[connection signal="pressed" from="contenu/contenu_b" to="." method="_on_contenu_b_pressed"]
[connection signal="pressed" from="restart/restart_b" to="." method="_on_restart_b_pressed"]
[connection signal="pressed" from="menu/menu_b" to="." method="_on_menu_b_pressed"]
